<resources>
    <string name="app_name">logIn</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="terms">By joining you agree to our Terms &amp; Conditions</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
