<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/logIn"
            android:layout_width="350dp"
            android:layout_height="42dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/myrect"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/log_in" />
    </RelativeLayout>
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="false" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="18dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="199dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/terms" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="391dp"
        android:src="@drawable/wlogo" />

</FrameLayout>